Add publish_site task to Rake, now Cerberus has site at http://cerberus.rubyforge.org/
git-svn-id: http://cerberus.rubyforge.org/svn@73 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/options.page
+++ b/doc/site/src/options.page
@@ -3,7 +3,7 @@ title: Config Option Index
 inMenu: true
 orderInfo: 4
 ---
-h2. Options
+h2. Configuration Options
 
 h4. Options available from config files
 
