Improved FAQ recipe
git-svn-id: http://cerberus.rubyforge.org/svn@83 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/faq.page
+++ b/doc/site/src/faq.page
@@ -36,6 +36,7 @@ SET CERBERUS_HOME="C:\Documents and Settings\anatol\.cerberus"
 
 #( [cerberus]watsjit
 AsLoggedUser
+LoadProfile
 Time: */15 * * * * *
 Action:
 SWHide   NormalPriority
