Improved docs for site
git-svn-id: http://cerberus.rubyforge.org/svn@86 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/faq.page
+++ b/doc/site/src/faq.page
@@ -34,7 +34,7 @@ Mine nncron.tab file looks like below
 <pre>
 SET CERBERUS_HOME="C:\Documents and Settings\anatol\.cerberus"
 
-#( [cerberus]watsjit
+#( cerberus
 AsLoggedUser
 LoadProfile
 Time: */15 * * * * *
