Added another FAQ section
git-svn-id: http://cerberus.rubyforge.org/svn@101 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/faq.page
+++ b/doc/site/src/faq.page
@@ -58,3 +58,13 @@ To make it add /hooks/post-commit file with following content
 </pre>
 
 And do not forget to add execution permission to this file.
+
+
+h3. I would like to disable (but not to remove) project in Cerberus
+
+Sometime we need temporary disble built application that  __cerberus buildall__ command does not run it each time.
+
+To achieve it just rename configuration file for YOUR_APPLICATION from
+__config/YOUR_APPLICATION.yml__ to __config/YOUR_APPLICATION.yml.disabled__
+
+Cerberus picks up only configurations that end with .yml
