--- a/doc/site/src/index.page
+++ b/doc/site/src/index.page
@@ -5,7 +5,7 @@ orderInfo: 1
 ---
 h2. Cerberus
 
-Cerberus is a Continuous Builder software. Cerberus could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
+Cerberus is Continuous Builder software. Cerberus could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
 
 Cerberus requires: 
 * "ruby":http://ruby-lang.org/en/ - 1.8.2 or higher
@@ -26,14 +26,14 @@ h4. There is several solutions already present, why do you need to use Cerberus?
 
 Main advantages of Cerberus over other solutions:
 * Cerberus could be installed on any machine not only where SVN repository located.
-* Cerberus works not only for Rails projects, but for any other Ruby (or better to say for projects that use Rake).
+* Cerberus works not only for Rails projects, but for any other Ruby projects (or better to say for projects that use Rake).
 * Cerberus multiplatform solution: it runs excellent both on *nix and Windows.
-* Cerberus distributed via RubyGems, so it is very easy to install and very easy to update to the latest available versin.
+* Cerberus distributed via RubyGems, so it is very easy to install and very easy to update to the latest available version.
 * Cerberus very easy start to use. Just type @cerberus add PROJECT_URL|PROJECT_DIR@.
-* Cerberus is lightweigt solution: mots of the time ruby process even not run. Cerberus runs @rake@ only in case if changes in project found.
+* Cerberus is lightweight solution: mots of the time ruby process even not run. Cerberus runs @rake@ only in case if changes in project found.
 
  
-To use Cerberus it is very easy. First install it. Easiest way to do it through RubyGems package manager.
+To use Cerberus it is very easy. First install it. RubyGems package manager is an easiest way to do it.
 
 @gem install cerberus@
 
@@ -66,7 +66,7 @@ And then run Cerberus project
 
 @cerberus build APPLICATION_NAME@
 
-or run __all__ registred projects
+or run __all__ registered projects
 
 @cerberus buildall@
 
