--- a/doc/site/src/index.page
+++ b/doc/site/src/index.page
@@ -5,12 +5,13 @@ orderInfo: 1
 ---
 h2. Cerberus
 
-Cerberus is Continuous Builder software. Cerberus could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
+Cerberus is Continuous Builder software. It could be periodically run from scheduler and check if application tests are broken. If it happens then Cerberus will send notification to developers. Cerberus perfectly works both on Windows and *nix platforms.
 
 Cerberus requires: 
 * "ruby":http://ruby-lang.org/en/ - 1.8.2 or higher
 * "rake":http://rubyforge.org/projects/rake - 0.7 or higher
-* "subversion":http://subversion.tigris.org/ client - 1.2 or higher
+* "subversion":http://subversion.tigris.org/ client - 1.2 or higher (optional)
+* "darcs":http://darcs.net/ client - 1.0.7 or higher (optional)
 
 h4. What 'Cerberus' name means?
 
