Added BJam build tool support
git-svn-id: http://cerberus.rubyforge.org/svn@117 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/index.page
+++ b/doc/site/src/index.page
@@ -12,6 +12,7 @@ Cerberus requires:
 * "rake":http://rubyforge.org/projects/rake - 0.7 or higher
 * "subversion":http://subversion.tigris.org/ client - 1.2 or higher (optional)
 * "darcs":http://darcs.net/ client - 1.0.7 or higher (optional)
+* "bjam":http://www.boost.org/tools/build/v2/index.html (optional)
 
 h4. What 'Cerberus' name means?
 
