Added support of Perforce SCM
git-svn-id: http://cerberus.rubyforge.org/svn@120 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/options.page
+++ b/doc/site/src/options.page
@@ -41,6 +41,7 @@ scm:
   url:
   user_name:
   password:
+  view: #for perforce only
 builder:
   type:
   rake:                                         
