Implemented hooks for Cerberus
git-svn-id: http://cerberus.rubyforge.org/svn@141 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/options.page
+++ b/doc/site/src/options.page
@@ -62,7 +62,10 @@ builder:
 log:
   enable:
 changeset_url: 
-</pre>
+hook:
+  HOOK_NAME:
+    on_event: 
+    action: 
 
 
 h4. Option available from command line
