Update to ActionMailer 1.3.2
git-svn-id: http://cerberus.rubyforge.org/svn@143 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/faq.page
+++ b/doc/site/src/faq.page
@@ -84,7 +84,7 @@ Then add following content to SUBVERSION_REPO/hooks/post-commit file
 /usr/bin/env cerberus build YOUR_APPLICATION_NAME &
 </pre>
 
-To test correctness of hook please run
+To test correctness of the hook please run
 
 <pre>
 sudo -u YOUR_USER post-commit
