Fix link to Yuri's article
git-svn-id: http://cerberus.rubyforge.org/svn@147 65aa75ef-ce15-0410-bc34-cdc86d5f77e6

--- a/doc/site/src/in_the_web.page
+++ b/doc/site/src/in_the_web.page
@@ -13,4 +13,4 @@ And if you able quick and effectively fix small problems (like broken windows) y
 
 * Very good "Cerberus tutorial":http://www.degrunt.net/articles/2006/08/27/cerberus-continious-integration-for-rails/#extended  from Tom de Grunt
 * "Josh's article":http://www.cuberick.com/?p=43
-* "Yurii Rashkovskii's great intro article about Cerberus setup":http://rashkovskii.com/articles/2007/01/10/continuos-integration-cerberus .
+* "Yurii Rashkovskii's great intro article about Cerberus setup":http://rashkovskii.com/articles/2007/1/10/continuous-integration-cerberus
