--- a/doc/site/src/in_the_web.page
+++ b/doc/site/src/in_the_web.page
@@ -5,12 +5,12 @@ orderInfo: 5
 ---
 h2. Interestin in the Web
 
-There you could find list of interesting articles that have relation to Cerberus.
+Here you could find list of interesting articles that have relation to Cerberus.
 
 * Legendary "article about Continuous Integration":http://www.martinfowler.com/articles/continuousIntegration.html from Martin Fowler
 * Very interesting reading about automated builds "Daily Builds Are Your Friend":http://www.joelonsoftware.com/articles/fog0000000023.html from Joel Spolsky
-* "Theory of Broken Windows":http://en.wikipedia.org/wiki/Fixing_Broken_Windows explanation. This theory says that big problems starts from small one. 
-And if you able quick and effectively fix small problems (like broken windows) you would avoid most of the big problems (like crime).
+* "Theory of Broken Windows":http://en.wikipedia.org/wiki/Fixing_Broken_Windows explanation. This theory says that big problems starts from small ones. 
+And if you are able quick and effectively solve small problems (like broken windows) you would avoid most of the big problems (like crime).
 
 * Very good "Cerberus tutorial":http://www.degrunt.net/articles/2006/08/27/cerberus-continious-integration-for-rails/#extended  from Tom de Grunt
 * "Josh's article":http://www.cuberick.com/?p=43
